# RustyTag

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  README_EN.md  crates.js  help.html  search-index.js  settings.html  src-files.js
.github/workflows/: ci.yml  docs.yml  publish.yml  release.yml
docs/: guide.md
rustytag/: all.html  index.html
rustytag/utils/: index.html  sidebar-items.js
rustytag/utils/config/: enum.ConfigKey.html  fn.get_config_path.html  fn.handle_config_command.html  index.html  sidebar-items.js  struct.Config.html  struct.GlobalConfig.html  struct.LocalConfig.html
rustytag/utils/file/: fn.create_changelog.html  fn.create_gitignore.html  index.html  sidebar-items.js
rustytag/utils/git/: fn.add_project_files.html  fn.commit_changes.html  fn.compare_tags.html  fn.convert_ssh_to_https.html  fn.create_callbacks.html  fn.create_tag.html  fn.display_sync_status.html  fn.fetch_remote_tags.html  fn.get_commits_after_tag.html  fn.get_git_commits.html  fn.get_latest_tag.html  fn.get_local_tags.html  fn.get_project_info.html  fn.get_remote.html  fn.get_remote_tags.html  fn.get_remote_url.html  fn.initialize_git_repo.html  fn.pull_tags.html  fn.push_tags.html  fn.reset_tags.html  fn.show_and_sync_tags.html  index.html  sidebar-items.js  struct.GitCommit.html  struct.ProjectInfo.html  struct.TagSyncStatus.html
rustytag/utils/github/: index.html  (+4 more)
search.desc/rustytag/: rustytag-desc-0-.js
src/: lib.rs  main.rs
src/rustytag/: lib.rs.html
src/utils/: config.rs  file.rs  git.rs  github.rs  mod.rs  project.rs  version.rs
(+41 files in other folders)
