[package]
name = "rustytag"
version = "0.1.22"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.27", features = ["derive"] }
git2 = "0.17"
semver = "1.0.25"
chrono = "0.4"
dirs = "5.0"
toml_edit = "0.19"
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
