[package]
name = "rustytag"
version = "1.0.14"
edition = "2021"
description = "A semantic version management tool built on Git tags."
authors = ["sichang <zhaoanke@163.com>"]
license = "MIT"
repository = "https://github.com/sichang824/rustytag"
documentation = "https://docs.rs/rustytag"
readme = "README.md"
keywords = ["git", "semver", "tag", "version", "management"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.27", features = ["derive"] }
git2 = "0.17"
semver = "1.0.25"
chrono = "0.4"
dirs = "5.0"
toml_edit = "0.19"
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
